--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,15 +47,12 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                style="@style/T_600_16_19_2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fontFamily="@font/pretendard"
-                android:lineHeight="19sp"
                 android:text="@string/kakao_login"
                 android:textAlignment="center"
-                android:textColor="@color/gray_900"
-                android:textFontWeight="600"
-                android:textSize="16sp" />
+                android:textColor="@color/gray_900" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -82,15 +79,12 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                style="@style/T_600_16_19_2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fontFamily="@font/pretendard"
-                android:lineHeight="19sp"
                 android:text="@string/google_login"
                 android:textAlignment="center"
-                android:textColor="@color/gray_900"
-                android:textFontWeight="600"
-                android:textSize="16sp" />
+                android:textColor="@color/gray_900" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
