--- a/app/src/main/res/layout/bottom_sheet_onboarding.xml
+++ b/app/src/main/res/layout/bottom_sheet_onboarding.xml
@@ -32,19 +32,17 @@
 
         <TextView
             android:id="@+id/tv_next_button"
+            style="@style/T_600_16_19_2"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="36dp"
-            android:background="@drawable/sr_orange500_all8"
+            android:background="@drawable/selector_orange500_all8"
             android:gravity="center"
-            android:lineHeight="19.2sp"
             android:paddingHorizontal="20dp"
-            android:text="다음"
+            android:text="@string/next"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textFontWeight="600"
-            android:textSize="16sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/vp_onboarding" />
