--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -15,31 +15,25 @@
 
         <TextView
             android:id="@+id/tv_onboarding_title"
+            style="@style/T_700_24_28_8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:fontFamily="@font/pretendard"
-            android:lineHeight="28.8sp"
             android:text="@{viewModel.content.first}"
             android:textColor="@color/gray_900"
-            android:textFontWeight="700"
-            android:textSize="24sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_onboarding_content"
+            style="@style/T_500_16_22_4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:fontFamily="@font/pretendard"
-            android:lineHeight="22.4sp"
             android:text="@{viewModel.content.second}"
             android:textAlignment="center"
             android:textColor="@color/gray_700"
-            android:textFontWeight="500"
-            android:textSize="16sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_onboarding_title" />
