feat : 기본 정보 입력 UI 구현

--- a/component/src/main/res/values/colors.xml
+++ b/component/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="orange_900">#331500</color>
 
     <color name="gray_0">#FCFCFC</color>
+    <color name="gray_25">#FBFBFB</color>
     <color name="gray_50">#F2F2F2</color>
     <color name="gray_100">#E6E6E6</color>
     <color name="gray_200">#CFCFCF</color>
