--- a/component/src/main/res/values/text-styles.xml
+++ b/component/src/main/res/values/text-styles.xml
@@ -58,6 +58,11 @@
         <item name="android:lineHeight">16.8sp</item>
     </style>
 
+    <style name="T_600_16_19_09" parent="pretendard600">
+        <item name="android:textSize">16sp</item>
+        <item name="android:lineHeight">19.09sp</item>
+    </style>
+
     <style name="T_600_16_19_2" parent="pretendard600">
         <item name="android:textSize">16sp</item>
         <item name="android:lineHeight">19.2sp</item>
