--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,6 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="info.imdang.imdang.ui.main.home.HomeViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,28 +24,33 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/tv_home_search"
-                style="@style/T_700_24_33_6"
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tl_home"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/home_search"
-                android:textColor="@color/gray_900"
+                android:layout_height="match_parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:tabBackground="@color/gray_25"
+                app:tabGravity="start"
+                app:tabIndicatorHeight="0dp"
+                app:tabPaddingEnd="24dp"
+                app:tabPaddingStart="0dp"
+                app:tabSelectedTextAppearance="@style/T_700_24_33_6"
+                app:tabSelectedTextColor="@color/gray_900"
+                app:tabTextAppearance="@style/T_600_24_33_6"
+                app:tabTextColor="@color/gray_500">
 
-            <TextView
-                android:id="@+id/tv_home_exchange"
-                style="@style/T_600_24_33_6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:text="@string/home_exchange"
-                android:textColor="@color/gray_500"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/tv_home_search"
-                app:layout_constraintTop_toTopOf="parent" />
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home_search" />
+
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home_exchange" />
+            </com.google.android.material.tabs.TabLayout>
 
             <ImageView
                 android:id="@+id/iv_home_alarm"
@@ -67,8 +79,10 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cl_home_top_bar" />
+            app:layout_constraintTop_toBottomOf="@id/cl_home_top_bar"
+            app:layout_constraintVertical_bias="1.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
