--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -76,13 +76,13 @@
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vp_home"
+            bindUserInputEnabled="@{false}"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cl_home_top_bar"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toBottomOf="@id/cl_home_top_bar" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
