--- a/app/src/main/res/layout/fragment_home_search.xml
+++ b/app/src/main/res/layout/fragment_home_search.xml
@@ -3,81 +3,95 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="info.imdang.imdang.ui.main.home.search.HomeSearchViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="24dp">
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_home_search"
-            android:layout_width="0dp"
+            android:id="@+id/cl_home_top_bar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="8dp"
-            android:background="@drawable/sr_white_gray100_all8"
-            android:paddingHorizontal="12dp"
-            android:paddingVertical="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/cl_home_map"
+            android:paddingHorizontal="20dp"
+            android:paddingTop="24dp"
+            android:paddingBottom="16dp"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/iv_home_search"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:importantForAccessibility="no"
-                android:src="@drawable/ic_search"
-                app:layout_constraintBottom_toBottomOf="parent"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_home_search"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/sr_white_gray100_all8"
+                android:paddingHorizontal="12dp"
+                android:paddingVertical="16dp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/tv_home_search"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintRight_toLeftOf="@id/cl_home_map"
+                app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/tv_home_search"
-                style="@style/T_500_14_19_6"
+                <ImageView
+                    android:id="@+id/iv_home_search"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:importantForAccessibility="no"
+                    android:src="@drawable/ic_search"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toLeftOf="@id/tv_home_search"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_home_search"
+                    style="@style/T_500_14_19_6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:text="@string/hint_home_search"
+                    android:textColor="@color/gray_500"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toRightOf="@id/iv_home_search"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_home_map"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="@string/hint_home_search"
-                android:textColor="@color/gray_500"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/iv_home_search"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_home_map"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:background="@drawable/selector_gray800_all8"
-            android:clickable="true"
-            android:focusable="true"
-            android:padding="13dp"
-            app:layout_constraintLeft_toRightOf="@id/cl_home_search"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:importantForAccessibility="no"
-                android:src="@drawable/ic_map"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
+                android:background="@drawable/selector_gray800_all8"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="13dp"
+                app:layout_constraintLeft_toRightOf="@id/cl_home_search"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/white" />
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:importantForAccessibility="no"
+                    android:src="@drawable/ic_map"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:tint="@color/white" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.core.widget.NestedScrollView
+            android:id="@+id/ns_home_search"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cl_home_search">
+            app:layout_constraintTop_toBottomOf="@id/cl_home_top_bar">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -98,6 +112,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/home_banner_content"
+                        android:textColor="@color/gray_900"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -128,6 +143,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:text="@string/home_my_insight_subject"
+                        android:textColor="@color/gray_900"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -137,12 +153,14 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
                         android:text="@string/see_all"
+                        android:textColor="@color/gray_700"
                         app:layout_constraintBottom_toBottomOf="@id/tv_home_my_insight_subject"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="@id/tv_home_my_insight_subject" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_home_my_insight_apt"
+                        bindItemList="@{viewModel.myInsightApts}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
@@ -157,6 +175,7 @@
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_home_my_insight"
+                        bindItemList="@{viewModel.myInsights}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="24dp"
@@ -193,6 +212,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:text="@string/home_new_insight_subject"
+                        android:textColor="@color/gray_900"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -202,12 +222,14 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
                         android:text="@string/see_all"
+                        android:textColor="@color/gray_700"
                         app:layout_constraintBottom_toBottomOf="@id/tv_home_new_insight_subject"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="@id/tv_home_new_insight_subject" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_home_new_insight"
+                        bindItemList="@{viewModel.newInsights}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="24dp"
@@ -241,32 +263,71 @@
                     <TextView
                         android:id="@+id/tv_home_recommend_insight_subject"
                         style="@style/T_600_18_25_2"
+                        bindSpanText="@{@string/home_recommend_insight_subject_point}"
+                        bindText="@{@string/home_recommend_insight_subject}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        android:text="@string/home_recommend_insight_subject"
+                        android:textColor="@color/gray_900"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="@string/home_recommend_insight_subject" />
 
                     <TextView
+                        android:id="@+id/tv_home_recommend_insight_selected_page"
+                        style="@style/T_600_14_19_6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{String.valueOf(viewModel.selectedRecommendInsightPage)}"
+                        android:textColor="@color/orange_500"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_home_recommend_insight_subject"
+                        app:layout_constraintRight_toLeftOf="@id/tv_home_recommend_insight_page"
+                        app:layout_constraintTop_toTopOf="@id/tv_home_recommend_insight_subject"
+                        tools:text="1" />
+
+                    <TextView
+                        android:id="@+id/tv_home_recommend_insight_page"
                         style="@style/T_400_14_19_6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
-                        android:text="1 / 4"
+                        android:text="@string/home_recommend_insight_page"
+                        android:textColor="@color/gray_700"
                         app:layout_constraintBottom_toBottomOf="@id/tv_home_recommend_insight_subject"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toTopOf="@id/tv_home_recommend_insight_subject" />
+                        app:layout_constraintTop_toTopOf="@id/tv_home_recommend_insight_subject"
+                        tools:text=" / 4" />
 
                     <androidx.viewpager2.widget.ViewPager2
                         android:id="@+id/vp_home_recommend_insight"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clipToPadding="false"
-                        android:paddingVertical="20dp"
+                        android:paddingVertical="24dp"
                         app:layout_constraintTop_toBottomOf="@id/tv_home_recommend_insight_subject" />
+
+                    <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/tl_indicator"
+                        android:layout_width="wrap_content"
+                        android:layout_height="6dp"
+                        android:background="@color/gray_25"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/vp_home_recommend_insight"
+                        app:tabBackground="@drawable/selector_dot_6"
+                        app:tabGravity="center"
+                        app:tabIndicatorHeight="0dp"
+                        app:tabMaxWidth="12dp"
+                        app:tabPaddingStart="6dp" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
+
+        <View
+            bindVisible="@{viewModel.isVisibleShadow}"
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
+            android:background="@drawable/gradient_black_8"
+            app:layout_constraintTop_toBottomOf="@id/cl_home_top_bar" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
