--- a/app/src/main/res/layout/item_insight_vertical.xml
+++ b/app/src/main/res/layout/item_insight_vertical.xml
@@ -3,18 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="item"
+            type="info.imdang.imdang.model.insight.InsightVo" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/iv_insight"
+            bindImage="@{item.thumbnail}"
+            bindCornerRadius="@{4}"
             android:layout_width="200dp"
             android:layout_height="160dp"
             android:importantForAccessibility="no"
             android:scaleType="centerCrop"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            tools:scaleType="centerCrop"
             tools:src="@drawable/img_apt_sample" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -44,11 +54,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="2dp"
-                android:text="강남구 신논현동"
+                android:text="@{item.region}"
                 android:textColor="@color/gray_700"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/iv_insight_region"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="강남구 신논현동" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
@@ -59,10 +70,11 @@
             android:background="@drawable/sr_orange50_all2"
             android:paddingHorizontal="8dp"
             android:paddingVertical="4dp"
-            android:text="추천 24"
+            android:text="@{`추천 ` + item.recommendCount}"
             android:textColor="@color/orange_500"
             app:layout_constraintLeft_toRightOf="@id/cl_insight_region"
-            app:layout_constraintTop_toTopOf="@id/cl_insight_region" />
+            app:layout_constraintTop_toTopOf="@id/cl_insight_region"
+            tools:text="추천 24" />
 
         <TextView
             android:id="@+id/tv_insight_title"
@@ -70,30 +82,35 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="초역세권 대단지 아파트 후기"
+            android:text="@{item.title}"
             android:textColor="@color/gray_900"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cl_insight_region" />
+            app:layout_constraintTop_toBottomOf="@id/cl_insight_region"
+            tools:text="초역세권 대단지 아파트 후기" />
 
         <ImageView
             android:id="@+id/iv_insight_profile"
+            bindImage="@{item.profileImage}"
+            bindPlaceHolder="@{@drawable/ic_profile}"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginTop="12dp"
             android:importantForAccessibility="no"
-            android:src="@drawable/ic_profile"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_insight_title" />
+            app:layout_constraintTop_toBottomOf="@id/tv_insight_title"
+            tools:scaleType="centerCrop"
+            tools:src="@drawable/ic_profile" />
 
         <TextView
             style="@style/T_500_14_19_6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:text="홍길동"
+            android:text="@{item.nickname}"
             android:textColor="@color/gray_700"
             app:layout_constraintBottom_toBottomOf="@id/iv_insight_profile"
             app:layout_constraintLeft_toRightOf="@id/iv_insight_profile"
-            app:layout_constraintTop_toTopOf="@id/iv_insight_profile" />
+            app:layout_constraintTop_toTopOf="@id/iv_insight_profile"
+            tools:text="홍길동" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
