--- a/app/src/main/res/layout/activity_join_complete.xml
+++ b/app/src/main/res/layout/activity_join_complete.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/gray_25"
-        tools:context=".ui.joincomplete.JoinCompleteActivity">
+        tools:context=".ui.join.JoinCompleteActivity">
 
         <ImageView
             android:id="@+id/iv_check_complete"
@@ -49,7 +49,7 @@
             android:id="@+id/tv_first_insight_complete"
             style="@style/T_500_14_21"
             android:layout_width="match_parent"
-            android:layout_height="61dp"
+            android:layout_height="60dp"
             android:layout_marginHorizontal="38dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/selector_gray50_all8"
@@ -65,7 +65,7 @@
             android:id="@+id/tv_second_insight_complete"
             style="@style/T_500_14_21"
             android:layout_width="match_parent"
-            android:layout_height="61dp"
+            android:layout_height="60dp"
             android:layout_marginHorizontal="38dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/selector_gray50_all8"
@@ -81,9 +81,9 @@
             android:id="@+id/tv_third_insight_complete"
             style="@style/T_500_14_21"
             android:layout_width="match_parent"
-            android:layout_height="61dp"
+            android:layout_height="60dp"
             android:layout_marginHorizontal="38dp"
-            android:layout_marginBottom="124dp"
+            android:layout_marginBottom="126dp"
             android:background="@drawable/selector_gray50_all8"
             android:gravity="center"
             android:text="@string/third_insight"
