--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,7 @@
         <ImageView
             android:layout_width="180dp"
             android:layout_height="wrap_content"
+            android:importantForAccessibility="no"
             android:src="@drawable/ic_imdang"
             app:layout_constraintBottom_toTopOf="@id/cl_kakao_login"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -30,6 +31,7 @@
             android:layout_marginBottom="12dp"
             android:background="@drawable/selector_kakao_all8"
             android:clickable="true"
+            android:focusable="true"
             android:paddingHorizontal="20dp"
             android:paddingVertical="16dp"
             app:layout_constraintBottom_toTopOf="@id/cl_google_login"
@@ -46,7 +48,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                style="@style/T_600_16_19_2"
+                style="@style/T_600_16_22_4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/kakao_login"
@@ -61,6 +63,7 @@
             android:layout_marginBottom="40dp"
             android:background="@drawable/selector_white_gray100_all8"
             android:clickable="true"
+            android:focusable="true"
             android:paddingHorizontal="20dp"
             android:paddingVertical="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -77,7 +80,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                style="@style/T_600_16_19_2"
+                style="@style/T_600_16_22_4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/google_login"
