feat: 스플래시, 로그인 배경 색 수정

--- a/app/src/main/res/layout/bottom_sheet_onboarding.xml
+++ b/app/src/main/res/layout/bottom_sheet_onboarding.xml
@@ -5,7 +5,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/gray_25"
         android:paddingTop="32dp"
         android:paddingBottom="40dp">
 
